@startuml
title Patron Factory Method - Sistema de Ventas
package modelo {
   abstract class Persona {
    -nombreApellido: String
    -tipoDocumento: String
    -nroDocumento: String
    -CUIT: String
    -condicionAfip: String
    -genero: String
    -fechaNacimiento: Date
    -domicilio: String
    -email: String
    -telefonos: List<String>
  }

  class Cliente {
    -nro_cliente: String
  }

  class Empleado {
    -cargo: String
    +generarInformeVentaDiaria(): void
    +generarInformeVentaCajero(c: Empleado): void
    +generarInformeStockGeneral(): void
    +generarInformeStockProducto(p: Producto): void
  }

  Persona <|-- Cliente
  Persona <|-- Empleado
}

package factories {
  class PersonaFactory {
    +fabricar(tipo: String): Persona
  }

  ' Relación entre las fábricas y las clases de persona
  PersonaFactory <-- Cliente
  PersonaFactory <-- Empleado
}
@enduml